# Robotic_soln_varun

./: README.md  example.py
install/: local_setup.sh  setup.sh
install/sensor_package/lib/sensor_package/: my_node
install/sensor_package/share/sensor_package/: package.sh  package.xml  package.zsh
log/: latest_build
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/custom_interfaces/install/custom_interfaces/include/custom_interfaces/custom_interfaces/msg/: sensor_sample.hpp
src/custom_interfaces/install/custom_interfaces/include/custom_interfaces/custom_interfaces/msg/detail/: sensor_sample__functions.h  sensor_sample__rosidl_typesupport_fastrtps_cpp.hpp  sensor_sample__rosidl_typesupport_introspection_cpp.hpp  sensor_sample__struct.h  sensor_sample__type_support.c
src/custom_interfaces/install/custom_interfaces/include/custom_interfaces/custom_interfaces/srv/: sensor_read.h  sensor_read.hpp
src/custom_interfaces/install/custom_interfaces/include/custom_interfaces/custom_interfaces/srv/detail/: sensor_read__functions.c  sensor_read__functions.h  sensor_read__rosidl_typesupport_fastrtps_cpp.hpp  sensor_read__struct.h  sensor_read__struct.hpp  sensor_read__traits.hpp
src/custom_interfaces/install/custom_interfaces/local/lib/python3.10/dist-packages/custom_interfaces/: _custom_interfaces_s.ep.rosidl_typesupport_fastrtps_c.c
src/custom_interfaces/install/custom_interfaces/local/lib/python3.10/dist-packages/custom_interfaces/msg/: __init__.py  _sensor_sample_s.c
src/custom_interfaces/install/custom_interfaces/local/lib/python3.10/dist-packages/custom_interfaces/srv/: __init__.py  _sensor_read.py
src/custom_interfaces/install/custom_interfaces/share/ament_index/resource_index/rosidl_interfaces/: custom_interfaces
src/custom_interfaces/install/custom_interfaces/share/custom_interfaces/: local_setup.sh  package.sh
src/custom_interfaces/install/custom_interfaces/share/custom_interfaces/msg/: SensorSample.idl
src/custom_interfaces/install/custom_interfaces/share/custom_interfaces/srv/: SensorRead.idl  SensorRead_Request.msg
src/custom_interfaces/log/: latest_build
src/custom_interfaces/msg/: SensorReadCombined.msg  SensorSample.msg
src/custom_interfaces/srv/: SensorRead.srv
src/sensor_package/: package.xml  setup.cfg  setup.py
src/sensor_package/sensor_package/: sensor_client.py  sensor_service.py
src/sensor_package/sensor_package/submodules/: sensor.py
src/sensor_package_cpp/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
src/sensor_package_cpp/include/sensor_package_cpp/: sensor_client.hpp  sensor_read_publisher.hpp  sensor_read_subscriber.hpp
src/sensor_package_cpp/sensor_package_cpp/: bringup_py.py  my_node.py  sensor_client.py  sensor_service.py
src/sensor_package_cpp/sensor_package_cpp/submodules/: sensor.py  sensor_service.py
src/sensor_package_cpp/src/: bringup_cpp.cpp  sensor_client.cpp  sensor_read_publisher.cpp  sensor_read_subscriber.cpp  test_node.cpp
