<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_package</name>
  <version>0.0.0</version>
  <description>This is a python-only ament_python type package that is a prototype of the Sensor server-client service for an automated sensor. Part of an application for a Robotics Software Engineer position at Machina Labs.</description>
  <maintainer email="varunkamat99@gmail.com">varun</maintainer>
  <license>Creative Commons non-commercial</license>
  
  <depend>rclpy</depend>
  <depend>example_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>sensor</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
